--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,12 +67,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-1"/>
+            android:id="@+id/hhh101"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-1"/>
+            android:id="@+id/hhh111"/>
     </LinearLayout>
 
     <LinearLayout
@@ -131,12 +131,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-2"/>
+            android:id="@+id/hhh102"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-2"/>
+            android:id="@+id/hhh112"/>
     </LinearLayout>
 
     <LinearLayout
@@ -195,12 +195,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@+id/hhh10-3"/>
+        android:id="@+id/hhh103"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@+id/hhh11-3"/>
+        android:id="@+id/hhh113"/>
 </LinearLayout>
 
     <LinearLayout
@@ -259,12 +259,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-4"/>
+            android:id="@+id/hhh104"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-4"/>
+            android:id="@+id/hhh114"/>
     </LinearLayout>
 
     <LinearLayout
@@ -323,12 +323,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-5"/>
+            android:id="@+id/hhh105"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-5"/>
+            android:id="@+id/hhh115"/>
     </LinearLayout>
 
     <LinearLayout
@@ -387,12 +387,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-6"/>
+            android:id="@+id/hhh106"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-6"/>
+            android:id="@+id/hhh116"/>
     </LinearLayout>
 
     <LinearLayout
@@ -451,12 +451,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-7"/>
+            android:id="@+id/hhh107"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-7"/>
+            android:id="@+id/hhh117"/>
     </LinearLayout>
 
     <LinearLayout
@@ -515,12 +515,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-8"/>
+            android:id="@+id/hhh108"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-8"/>
+            android:id="@+id/hhh118"/>
     </LinearLayout>
 
     <LinearLayout
@@ -579,12 +579,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh10-9"/>
+            android:id="@+id/hhh109"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/hhh11-9"/>
+            android:id="@+id/hhh119"/>
     </LinearLayout>
 
 
